update online documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -285,6 +285,20 @@ To enable us to verify and provide credit to your contributions, please send us 
 We're looking forward to **your inputs and contributions** (at this [GitHub issue](https://github.com/hneth/unicol/issues/30))! 
 
 
+## Resources
+
+The following versions of **unicol** and corresponding resources are currently available: 
+
+Type:                      | Version:           | URL:                           |         
+:--------------------------|:-------------------|:-------------------------------| 
+A. **unicol** (R package): | [Release version](https://CRAN.R-project.org/package=unicol)  | <https://CRAN.R-project.org/package=unicol> |
+    &nbsp;                 | [Development version](https://github.com/hneth/unicol/)       | <https://github.com/hneth/unicol/> | 
+B. Online documentation:   | [Release version](https://hneth.github.io/unicol/)            | <https://hneth.github.io/unicol/> | 
+    &nbsp;                 | [Development version](https://hneth.github.io/unicol/dev/)    | <https://hneth.github.io/unicol/dev/> | 
+
+<!-- +++ here now +++  -->
+
+
 ## References 
 
 <!-- Origin / Background / Credit / Course coordinates: --> 
@@ -327,7 +341,6 @@ Computer software (R package version 0.1.0, August 16, 2023).
 Retrieved from <https://CRAN.R-project.org/package=unicol>.  
 doi\ [10.5281/zenodo.8252106](https://doi.org/10.5281/zenodo.8252106) 
 
-<!-- +++ here now +++  -->
 
 <!-- BibTeX:  -->
 
