--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(collapse = TRUE,
                       warning = FALSE, 
                       # Default figure options:
                       fig.align = "center", 
-                      fig.path = "inst/pix/README-",
+                      fig.path = "man/figures/README-",
                       out.width = "600")
 
 library(unicol)  # load package
@@ -46,11 +46,11 @@ url_unikn_github <- "https://github.com/hneth/unikn"
 <!-- Release badges end. -->
 
 
-# unicol `r packageVersion('unicol')` <img src = "inst/pix/logo.png" align = "right" alt = "unicol::" width = "165px" alt="" />
+# unicol `r packageVersion('unicol')` <img src = "man/figures/logo.png" align = "right" alt = "unicol::" width = "165px" alt="" />
 
 <!-- unicol pkg logo and link: -->
 <!-- <a href = "`r url_unicol_cran`"> -->
-<!-- <img src = "./inst/pix/logo.png" alt = "unicol::" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/> -->
+<!-- <img src = "./man/figures/logo.png" alt = "unicol::" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/> -->
 <!-- </a> -->
 
 
@@ -258,7 +258,7 @@ unikn::demopal(limerick_1, type = 3, main = "Using the colors of the University 
 
 <!-- unicol pkg logo and link: -->
 <a href = "`r url_unicol_cran`">
-<img src = "./inst/pix/logo.png" alt = "unicol::" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/>
+<img src = "./man/figures/logo.png" alt = "unicol::" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/>
 </a> 
 
 The current range of color palettes included in **unicol** is selective and incomplete. 
@@ -274,7 +274,7 @@ The vignette on [Institutional colors](https://hneth.github.io/unikn/articles/co
 
 <!-- ToDo: -->
 <a href = "https://github.com/hneth/unicol/issues/30">
-<img src = "./inst/pix/todo.png" alt = "unicol::todo" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/>
+<img src = "./man/figures/todo.png" alt = "unicol::todo" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/>
 </a>
 
 If you do create a new color palette, **please let us know** (on this [GitHub issue](https://github.com/hneth/unicol/issues/30)) 
@@ -310,7 +310,7 @@ B. Online documentation:   | [Release version](https://hneth.github.io/unicol/) 
 
 <!-- Uni Konstanz / uni.kn logo and link: -->
 <a href = "`r url_unikn`">
-<img src = "./inst/pix/logo_unikn.png" alt = "uni.kn" align = "right" width = "300px" style = "width: 300px; float: right; border:0;"/>
+<img src = "./man/figures/logo_unikn.png" alt = "uni.kn" align = "right" width = "300px" style = "width: 300px; float: right; border:0;"/>
 </a>
 
 The **unicol** package originated as a collaborative project by the following course:
@@ -337,7 +337,7 @@ The **unicol** package originated as a collaborative project by the following co
 
 <!-- unikn pkg logo and link: -->
 <!-- <a href = "`r url_unikn_cran`"> -->
-<!-- <img src = "./inst/pix/logo_unikn_pkg.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/> -->
+<!-- <img src = "./man/figures/logo_unikn_pkg.png" alt = "unikn::" align = "right" width = "140px" style = "width: 140px; float: right; border:0;"/> -->
 <!-- </a> -->
 
 The **unicol** package is based on the R\ package **[unikn](`r url_unikn_cran`)** and loads key functionality from it. 
