--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,6 @@ url_unikn_cran   <- "https://CRAN.R-project.org/package=unikn"
 url_unikn_github <- "https://github.com/hneth/unikn"
 ```
 
-
 <!-- Devel badges start: -->
 [![CRAN status](https://www.r-pkg.org/badges/version/unicol)](https://CRAN.R-project.org/package=unicol)
 [![Downloads/month](https://cranlogs.r-pkg.org/badges/unicol)](https://www.r-pkg.org/pkg/unicol)
@@ -46,7 +45,7 @@ url_unikn_github <- "https://github.com/hneth/unikn"
 <!-- Release badges end. -->
 
 
-# unicol `r packageVersion('unicol')` <img src = "man/figures/logo.png" align = "right" alt = "unicol::" width = "165px" alt="" />
+# unicol `r packageVersion('unicol')` <img src = "man/figures/logo.png" align = "right" alt = "unicol::" width = "165px" alt="" /> 
 
 <!-- unicol pkg logo and link: -->
 <!-- <a href = "`r url_unicol_cran`"> -->
@@ -54,17 +53,15 @@ url_unikn_github <- "https://github.com/hneth/unikn"
 <!-- </a> -->
 
 
-<!-- Slogan: -->
+<!-- Slogan: --> 
 
 ### The colors of your university {-}
-
 
 <!-- DESCRIPTION / Mission / Vision: -->
 
 Most universities use specific color combinations to express their unique brand identity. 
 The **unicol** package provides the colors and color palettes of various universities for easy plotting and printing in\ R. 
 We collect and provide a diverse range of color palettes for creating scientific visualizations. 
-
 
 <!-- Goal / Objectives: -->
 
@@ -130,6 +127,7 @@ knitr::kable(all_pals_df, caption = tab_caption, row.names = TRUE)
 <!-- ## Examples  -->
 
 <!-- Goal: Show some color palettes and how they can be used: -->
+
 
 ### Examples of color palettes
 
@@ -224,7 +222,7 @@ For instance, we can use the MIT colors (of the [Massachusetts Institute of Tech
 
 ```{r example-base-r-1}
 barplot(height = 1:10,
-        col = mit_pal, 
+        col = mit, 
         main = "Using the MIT colors")
 ```
 
@@ -233,7 +231,7 @@ To modify a color palette (e.g., by resizing the palette or adding transparency)
 
 ```{r example-base-r-2}
 barplot(height = 1/sqrt(1:16), 
-        col = usecol(mit_pal, n = 16), 
+        col = usecol(mit, n = 16), 
         main = "A color gradient of MIT colors")
 ```
 
@@ -281,6 +279,7 @@ To enable us to verify and provide credit to your contributions, please send us 
 3. your name and some valid contact information (e.g., an Email address).  
   
 We're looking forward to **your inputs and contributions** (at [this GitHub issue](https://github.com/hneth/unicol/issues/30))! 
+
 
 <!-- +++ here now +++  -->
 
