--- a/vignettes/using_pals.Rmd
+++ b/vignettes/using_pals.Rmd
@@ -18,20 +18,19 @@ org_opt <- options()  # store original user options
 
 options(max.print = "75")
 
-knitr::opts_chunk$set(echo = TRUE,
-                      cache = FALSE,
+knitr::opts_chunk$set(collapse = FALSE, 
+                      comment = "#>", 
                       prompt = FALSE,
                       tidy = FALSE,
-                      collapse = TRUE, 
-                      comment = "#>",
+                      echo = TRUE, 
                       message = FALSE,
                       warning = FALSE,
                       # Default figure options:
-                      fig.width = 6, 
-                      fig.asp = .70, # .618, # golden ratio
-                      fig.align = "center",
-                      out.width = "75%"
-)
+                      dpi = 100, 
+                      fig.align = 'center',
+                      fig.height = 5.0,
+                      fig.width  = 7.5,
+                      out.width = "600px")
 
 # URLs: ------ 
 
@@ -120,7 +119,7 @@ set.seed(6 * pi)  # reproducible randomness
 
 1. Directly using a color palette (e.g., the color palette\ `caltech_1`): 
 
-```{r demo-scatterplot-a, eval = TRUE, fig.width = 6, fig.asp = .90, fig.align = 'center', collapse = TRUE}
+```{r demo-scatterplot-a, eval = TRUE, fig.width = 6, fig.asp = .90, out.width = "400px"}
 plot(x = runif(99), y = runif(99), type = "p", 
      pch = 16, cex = 4,
      col = caltech_1,
@@ -129,7 +128,7 @@ plot(x = runif(99), y = runif(99), type = "p",
 
 2. Using a transformed color palette (after using the `usecol()` function of the **[unikn](`r url_unikn_cran`)** package for resizing and adding transparency to the palette):
 
-```{r demo-scatterplot-b, eval = TRUE, fig.width = 6, fig.asp = .90, fig.align = 'center', collapse = TRUE}
+```{r demo-scatterplot-b, eval = TRUE, fig.width = 6, fig.asp = .90, out.width = "400px"}
 my_col <- unikn::usecol(caltech_1, alpha = .60)  # with transparency
 
 plot(x = runif(99), y = runif(99), type = "p", 
@@ -157,7 +156,7 @@ The resulting color palette can then be provided as the `values` of **ggplot2**'
 
 2. Provide this palette as the `values` of the **ggplot2** functions `scale_color_manual()` or `scale_fill_manual()`. 
 
-```{r use-pal-ggplot2, eval = TRUE, fig.width = 6, fig.asp = .65, fig.align = 'center', collapse = TRUE}
+```{r use-pal-ggplot2, eval = TRUE, fig.width = 6, fig.asp = .65, out.width = "550px"}
 # 0. Create some data to plot: ---- 
 
 # Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/
