--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -18,20 +18,19 @@ org_opt <- options()  # store original user options
 
 options(max.print = "75")
 
-knitr::opts_chunk$set(echo = TRUE,
-                      cache = FALSE,
+knitr::opts_chunk$set(collapse = FALSE, 
+                      comment = "#>", 
                       prompt = FALSE,
                       tidy = FALSE,
-                      collapse = TRUE, 
-                      comment = "#>",
+                      echo = TRUE, 
                       message = FALSE,
                       warning = FALSE,
                       # Default figure options:
-                      # fig.width = 6, 
-                      # fig.asp = .80 # .618, # golden ratio
-                      fig.align = "center",
-                      out.width = "60%"
-)
+                      dpi = 100, 
+                      fig.align = 'center',
+                      fig.height = 5.0,
+                      fig.width  = 7.5,
+                      out.width = "600px")
 
 # URLs: ------ 
 
@@ -154,7 +153,7 @@ knitr::kable(unicol_data[sample_n, ], caption = tab_caption)
 
 **Figure\ 1** illustrates `r n` random color palettes: 
 
-```{r unicol-pals-figure-sample, echo = FALSE, eval = TRUE, fig.width = 8, out.width = "90%", fig.asp = 1.5, fig.cap = fig_caption}
+```{r unicol-pals-figure-sample, echo = FALSE, eval = TRUE, fig.asp = 1.5, fig.cap = fig_caption}
 # Figure: Illustrate color palettes:
 unikn::seecol(pal = pal_list,
               pal_names = pal_names,         
