--- a/README.Rmd
+++ b/README.Rmd
@@ -52,11 +52,11 @@ url_unikn_github <- "https://github.com/hneth/unikn"
 <!-- Release badges end. -->
 
 
-# unicol `r packageVersion('unicol')` <img src = "man/figures/logo.png" align = "right" alt = "unicol::" width = "165px" alt="" /> 
+# unicol `r packageVersion('unicol')` <img src = "man/figures/logo.png" align = "right" alt = "unicol::" width = "160px" alt="" /> 
 
 <!-- unicol pkg logo and link: -->
 <!-- <a href = "`r url_unicol_cran`"> -->
-<!-- <img src = "./man/figures/logo.png" alt = "unicol::" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/> -->
+<!-- <img src = "./man/figures/logo.png" alt = "unicol::" align = "right" width = "160px" style = "width: 160px; float: right; border:0;"/> -->
 <!-- </a> -->
 
 
@@ -215,11 +215,12 @@ my_main     <- paste0("Illustrating ", n, " unicol palettes (with ", col_count, 
 
 ```{r unicol-pals-example-1-stats, echo = FALSE, eval = FALSE}
 # Stats (for n <- N):
-n_pals  # number of color palettes: 202 on 2023-04-08. 
-n_inst  # number of institutions: 86 on 2023-08-03.
-# Colors:
-length(unlist(pal_list))          # number of colors: 1327 on 2023-04-08. 
-length(unique(unlist(pal_list)))  # number of unique colors: 1130 on 2023-04-08. 
+n_pals  # number of color palettes: 235 on 2023-09-14. 
+n_inst  # number of institutions:   102 on 2023-09-14.
+# Colors (in current set):
+col_count
+length(unlist(pal_list))          # number of colors: 226 on 2023-09-14. 
+length(unique(unlist(pal_list)))  # number of unique colors: 198 on 2023-09-14. 
 ```
 
 
@@ -233,13 +234,14 @@ knitr::kable(unicol_data[sample_n, ], caption = tab_caption)
 
 **Figure\ 1** illustrates `r n` random color palettes (with `r col_count`\ colors): 
 
-```{r unicol-pals-example-1-figure, echo = FALSE, eval = TRUE, fig.asp = 1.5, fig.cap = fig_caption}
+```{r unicol-pals-example-1-figure, echo = FALSE, eval = TRUE, dpi = 100, fig.width  = 7.5, out.width = "600px", fig.asp = 1.5, fig.cap = fig_caption}
 # Figure: Illustrate color palettes:
 unikn::seecol(pal = pal_list,
               pal_names = pal_names,         
               main = my_main)
 ```
 
+<!-- ![Examples of 50 color palettes included in **unicol**.](./man/figures/README-unicol-pals-example-1-figure-1.png) -->
 
 ### Using color palettes
 
@@ -298,7 +300,7 @@ To enable us to verify and provide credit to your contributions, please send us 
 
 <!-- ToDo: -->
 <a href = "https://github.com/hneth/unicol/issues/30">
-<img src = "./man/figures/todo.png" alt = "unicol::todo" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/>
+<img src = "./man/figures/todo.png" alt = "unicol::todo" align = "right" width = "160px" style = "width: 160px; float: right; border:0;"/>
 </a>
 
 1. your code (e.g., the `newpal()` command creating your color palette),   
@@ -369,17 +371,17 @@ The **unicol** package is based on the R\ package **[unikn](`r url_unikn_cran`)*
 
 <!-- unicol pkg logo and link: -->
 <a href = "`r url_unicol_cran`">
-<img src = "./man/figures/logo.png" alt = "unicol::" align = "right" width = "165px" style = "width: 165px; float: right; border:0;"/>
+<img src = "./man/figures/logo.png" alt = "unicol::" align = "right" width = "160px" style = "width: 160px; float: right; border:0;"/>
 </a> 
 
-To support our efforts, please cite the **unicol** package in your derivations or publications. 
+To support our efforts, please cite the **unicol** package in your derivations or publications: 
 
 <!-- Citation / reference (in APA format): -->
 
 - Neth, H. et al. (2023). 
 unicol: The colors of your university.  
 Social Psychology and Decision Sciences, University of Konstanz, Germany.  
-Computer software (R package version 0.1.0, August 16, 2023).  
+Computer software (R package version 0.2.0, September 15, 2023).  
 Retrieved from <https://CRAN.R-project.org/package=unicol>.  
 doi\ [10.5281/zenodo.8252106](https://doi.org/10.5281/zenodo.8252106) 
 
