--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -166,7 +166,7 @@ unikn::seecol(pal = pal_list,
 
 **Table\ 1** provides an overview of **all `r n_pals`\ color palettes** from from **`r n_inst`\ institutions**: 
 
-```{r unicol-pals-table-all, echo = FALSE, eval = TRUE}
+```{r unicol-pals-table-static, echo = FALSE, eval = FALSE}
 # Data:
 all_pals_df <- unicol_data
 names(all_pals_df) <- c("Institution", "(aka.)", "URL", "Palette name")
@@ -175,6 +175,98 @@ tab_caption <- paste0("Overview of ", n_pals, " unicol palettes (from ", n_inst,
 
 # Print table:
 knitr::kable(all_pals_df, caption = tab_caption, row.names = TRUE)
+```
+
+
+```{r unicol-pals-table-links, echo = FALSE}
+# Utility functions: ------
+
+# look_up: Generalization of get_fns (above): ---- 
+
+look_up <- function(x, data, v_1 = 1, v_2 = 1){
+  
+  # identify vectors:
+  data_v_1 <- data[[v_1]]  # input
+  data_v_2 <- data[[v_2]]  # output
+  
+  # positions matching x in input:
+  pos <- match(x, data_v_1)
+  
+  # use pos to index output:
+  data_v_2[pos]
+  
+}
+
+# # Check:
+# # (a) specific exemplars:
+# look_up(x = c("cardiff_1", "not there", "princeton_1"), data = unicol_data, v_1 = "pal", v_2 = "inst")
+# look_up(x = c("cardiff_1", "not there", "princeton_1"), data = unicol_data, v_1 = "pal", v_2 = "url")
+# # (b) entire column:
+# look_up(x = unicol_data$pal, data = unicol_data, v_1 = "pal", v_2 = "inst")
+# look_up(x = unicol_data$pal, data = unicol_data, v_1 = "pal", v_2 = "url")
+
+
+
+# link_inst: Create a link to institution (given a vector of pal names): ----
+
+link_inst <- function(pal){
+
+  # look up inst and url corresponding to pal:  
+  inst_names <- look_up(pal, unicol_data, "pal", "inst")
+  inst_urls  <- look_up(pal, unicol_data, "pal", "url")  
+  
+  # create link:
+  paste0("[", inst_names, "](", inst_urls, ")")
+  
+} # link_inst().
+
+# # Check:
+# link_inst(pal = c("cardiff_1", "not there", "princeton_1"))
+# link_inst(unicol_data$pal)
+
+
+# link_doc: Create a link to online documentation (given a vector of pal names): ----
+
+link_github_doc <- function(pal){
+  
+  base_url <- "https://hneth.github.io/unicol/reference/"      # in release
+  base_url <- "https://hneth.github.io/unicol/dev/reference/"  # dev version
+  
+  # # look up inst and url corresponding to pal:  
+  # inst_names <- look_up(pal, unicol_data, "pal", "inst")
+  # inst_urls  <- look_up(pal, unicol_data, "pal", "url")  
+  
+  prefix <- base_url
+  suffix <- ".html"
+  
+  # create link:
+  paste0("[", pal, "](", prefix, pal, suffix, ")")
+  
+} # link_github_doc().
+
+# # Check:
+# link_github_doc(pal = c("cardiff_1", "not there", "princeton_1"))
+# link_github_doc(unicol_data$pal)
+
+
+# 2: Process unicol_data: ------
+
+my_pals <- unicol_data$pal
+
+# Look up URLs and create links for my_pals:
+pal_urls <- look_up(my_pals, unicol_data, v_1 = "pal", v_2 = "url")
+pal_inst_links <- link_inst(my_pals)
+pal_doc_links  <- link_github_doc(my_pals)
+
+my_df <- data.frame(Institution = pal_inst_links, 
+                    URL = pal_urls, 
+                    'Color palette' = pal_doc_links)
+
+
+# 3: Print table: ------
+df_caption <- paste0("Overview of ", n_pals, " unicol palettes (from ", n_inst, " institutions).")
+
+knitr::kable(my_df, caption = df_caption, row.names = TRUE)
 ```
 
 
