--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -38,6 +38,9 @@ knitr::opts_chunk$set(collapse = FALSE,
 url_unicol_cran   <- "https://CRAN.R-project.org/package=unicol"
 url_unicol_github <- "https://github.com/hneth/unicol"
 
+url_github_doc_rel <- "https://hneth.github.io/unicol/"      # release version  
+url_github_doc_dev <- "https://hneth.github.io/unicol/dev/"  # dev version
+
 # unikn / Uni Konstanz:
 url_unikn <- "https://www.uni-konstanz.de"
 
@@ -64,7 +67,7 @@ url_unikn_github <- "https://github.com/hneth/unikn"
 This vignettes provides an overview of the **color palettes** provided by the **unicol** package. 
 (See the vignette on [Using color palettes](using_pals.html) for how to use the **unicol** color palettes.) 
 
-We install or load the **unicol** package to get started: 
+We install and load the **unicol** package to get started: 
 
 ```{r load-unicol-pkg, message = FALSE, warning = FALSE}
 # install.packages('unicol')  # install unicol from CRAN client
@@ -72,99 +75,23 @@ library('unicol')             # load the package
 ```
 
 
-## The color palettes of the **unicol** package
+<!-- The color palettes of the **unicol** package -->
+
+## Overview 
 
 ```{r unicol-stats, echo = FALSE}
 n_pals <- length(unique(unicol_data$pal))
 n_inst <- length(unique(unicol_data$inst))
 ```
 
-The **unicol** package currently provides **`r n_pals`\ color palettes** from **`r n_inst`\ institutions**. 
+The **unicol** package currently provides **`r n_pals`\ color palettes** from **`r n_inst`\ institutions**.  
 
+<!-- ### Overview -->
 
-### Illustration 
+<!-- **Table\ 1** provides an overview of **all `r n_pals`\ color palettes** from from **`r n_inst`\ institutions**.  -->
 
-```{r unicol-pals-example, echo = FALSE, eval = TRUE}
-# Parameters:
-N <- length(unicol_data$pal)
-n <- 50 # N
-
-set.seed(24) # reproducible randomness
-
-# A: Get sample_n of my_pals from all unicol_data$pal:
-sample_n <- sort(sample(x = 1:N, size = n, replace = FALSE))
-my_pals <- unicol_data$pal[sample_n]
-
-# B: Get sample_n of primary_pals:
-is_pal_1 <- grepl(pattern = "_1", unicol_data$pal)
-# sum(is_pal_1)
-primary_pals <- unicol_data$pal[is_pal_1]
-
-N <- length(primary_pals)
-sample_n <- sort(sample(x = 1:N, size = n, replace = FALSE))
-my_pals <- primary_pals[sample_n]
-
-# Initialize data structures:
-pal_list  <- vector(mode = "list", length = n)
-pal_names <- vector(mode = "character", length = n)
-col_count <- 0
-
-# Loop: Iterate through n palettes:
-for (i in 1:n){
-  
-  cur_name  <- my_pals[i]
-  cur_pal   <- get(cur_name)
-  cur_count <- length(cur_pal)
-    
-  pal_list[[i]] <- cur_pal
-  pal_names[i]  <- cur_name
-  col_count     <- col_count + cur_count
-    
-} # for i loop end.
-
-# Check:
-# pal_list
-# pal_names
-
-# Captions:
-tab_caption <- paste0("A sample of ", n, " unicol palettes (containing ", col_count, " colors).")
-fig_caption <- paste0("Figure 1: A sample of ", n, " unicol palettes (containing ", col_count, " colors).")
-my_main     <- paste0("Illustrating ", n, " unicol palettes (with ", col_count, " colors)")
-```
-
-```{r unicol-pals-example-stats, echo = FALSE, eval = FALSE}
-# Stats (for n <- N):
-n_pals  # number of color palettes: 236 on 2023-09-14. 
-n_inst  # number of institutions:   102 on 2023-09-14.
-# Colors (in current set):
-length(unlist(pal_list))          # number of colors: 253 on 2023-09-14. 
-length(unique(unlist(pal_list)))  # number of unique colors: 222 on 2023-09-14. 
-```
-
-
-<!-- Show as table: -->
-
-```{r unicol-pals-table-sample, echo = FALSE, eval = FALSE}
-knitr::kable(unicol_data[sample_n, ], caption = tab_caption)
-```
-
-
-<!-- Show as figure: -->
-
-**Figure\ 1** illustrates a random sample of `r n` color palettes: 
-
-```{r unicol-pals-figure-sample, echo = FALSE, eval = FALSE, fig.asp = 1.5, fig.cap = fig_caption}
-# Figure: Illustrate color palettes:
-unikn::seecol(pal = pal_list,
-              pal_names = pal_names,         
-              main = my_main)
-```
-
-![**Figure 1:** Examples of **unicol** color palettes.](../man/figures/README-unicol-pals-example-1-figure-1.png)
-
-### Overview
-
-**Table\ 1** provides an overview of **all `r n_pals`\ color palettes** from from **`r n_inst`\ institutions**: 
+**Table\ 1** provides an overview of all included institutions and color palettes. 
+Clicking on the name of a color palette opens the corresponding page of the [online reference](`r paste0(url_github_doc_dev, "/reference/")`). 
 
 ```{r unicol-pals-table-static, echo = FALSE, eval = FALSE}
 # Data:
@@ -228,9 +155,8 @@ link_inst <- function(pal){
 # link_doc: Create a link to online documentation (given a vector of pal names): ----
 
 link_github_doc <- function(pal){
-  
-  base_url <- "https://hneth.github.io/unicol/reference/"      # release version
-  base_url <- "https://hneth.github.io/unicol/dev/reference/"  # dev version
+
+  ref_url <- paste0(url_github_doc_dev, "reference/")      # release version
   
   # base_url <- "../reference/"  # relative link
   
@@ -238,7 +164,7 @@ link_github_doc <- function(pal){
   # inst_names <- look_up(pal, unicol_data, "pal", "inst")
   # inst_urls  <- look_up(pal, unicol_data, "pal", "url")  
   
-  prefix <- base_url
+  prefix <- ref_url
   suffix <- ".html"
   
   # create link:
@@ -251,6 +177,19 @@ link_github_doc <- function(pal){
 # link_github_doc(unicol_data$pal)
 
 
+# n_col: Get number of colors (for 1 loaded pal): ----
+
+n_col <- function(pal_name){
+  
+  length(eval(str2expression(pal_name)))
+  
+}
+
+# # Check:
+# n_col("uni_konstanz_1")
+# sapply(unicol_data$pal, FUN = n_col)
+
+
 # 2: Process unicol_data: ------
 
 my_pals <- unicol_data$pal
@@ -259,17 +198,104 @@ my_pals <- unicol_data$pal
 pal_urls <- look_up(my_pals, unicol_data, v_1 = "pal", v_2 = "url")
 pal_inst_links <- link_inst(my_pals)
 pal_doc_links  <- link_github_doc(my_pals)
+pal_lengths    <- sapply(X = unicol_data$pal, FUN = n_col)
 
-my_df <- data.frame(Institution = pal_inst_links, 
-                    URL = pal_urls, 
-                    'Color palette' = pal_doc_links)
+my_df <- data.frame(inst = pal_inst_links, 
+                    # url = pal_urls, 
+                    pal = pal_doc_links,
+                    n_col = pal_lengths)
 
+row.names(my_df) <- 1:nrow(my_df)
+col_names <- c("University", 
+               # "URL", 
+               "Color palette", 
+               "N colors")
 
 # 3: Print table: ------
 df_caption <- paste0("Overview of ", n_pals, " unicol palettes (from ", n_inst, " institutions).")
 
-knitr::kable(my_df, caption = df_caption, row.names = TRUE)
+knitr::kable(my_df, caption = df_caption, col.names = col_names, row.names = TRUE)
 ```
+
+
+### Illustration 
+
+```{r unicol-pals-example, echo = FALSE, eval = TRUE}
+# Parameters:
+N <- length(unicol_data$pal)
+n <- 50 # N
+
+set.seed(24) # reproducible randomness
+
+# A: Get sample_n of my_pals from all unicol_data$pal:
+sample_n <- sort(sample(x = 1:N, size = n, replace = FALSE))
+my_pals <- unicol_data$pal[sample_n]
+
+# B: Get sample_n of primary_pals:
+is_pal_1 <- grepl(pattern = "_1", unicol_data$pal)
+# sum(is_pal_1)
+primary_pals <- unicol_data$pal[is_pal_1]
+
+N <- length(primary_pals)
+sample_n <- sort(sample(x = 1:N, size = n, replace = FALSE))
+my_pals <- primary_pals[sample_n]
+
+# Initialize data structures:
+pal_list  <- vector(mode = "list", length = n)
+pal_names <- vector(mode = "character", length = n)
+col_count <- 0
+
+# Loop: Iterate through n palettes:
+for (i in 1:n){
+  
+  cur_name  <- my_pals[i]
+  cur_pal   <- get(cur_name)
+  cur_count <- length(cur_pal)
+    
+  pal_list[[i]] <- cur_pal
+  pal_names[i]  <- cur_name
+  col_count     <- col_count + cur_count
+    
+} # for i loop end.
+
+# Check:
+# pal_list
+# pal_names
+
+# Captions:
+tab_caption <- paste0("A sample of ", n, " unicol palettes (containing ", col_count, " colors).")
+fig_caption <- paste0("Figure 1: A sample of ", n, " unicol palettes (containing ", col_count, " colors).")
+my_main     <- paste0("Illustrating ", n, " unicol palettes (with ", col_count, " colors)")
+```
+
+```{r unicol-pals-example-stats, echo = FALSE, eval = FALSE}
+# Stats (for n <- N):
+n_pals  # number of color palettes: 236 on 2023-09-14. 
+n_inst  # number of institutions:   102 on 2023-09-14.
+# Colors (in current set):
+length(unlist(pal_list))          # number of colors: 253 on 2023-09-14. 
+length(unique(unlist(pal_list)))  # number of unique colors: 222 on 2023-09-14. 
+```
+
+<!-- Show as table: -->
+
+```{r unicol-pals-table-sample, echo = FALSE, eval = FALSE}
+knitr::kable(unicol_data[sample_n, ], caption = tab_caption)
+```
+
+<!-- Show as figure: -->
+
+**Figure\ 1** illustrates a random sample of `r n` color palettes: 
+
+```{r unicol-pals-figure-sample, echo = FALSE, eval = FALSE, fig.asp = 1.5, fig.cap = fig_caption}
+# Figure: Illustrate color palettes:
+unikn::seecol(pal = pal_list,
+              pal_names = pal_names,         
+              main = my_main)
+```
+
+![**Figure 1:** Examples of **unicol** color palettes.](../man/figures/README-unicol-pals-example-1-figure-1.png)
+
 
 
 <!-- Collecting contributed color palettes (in unicol): -->
