revise lookup function (to allow for '1 to many' matches in df)

--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -106,31 +106,47 @@ knitr::kable(all_pals_df, caption = tab_caption, row.names = TRUE)
 
 
 ```{r unicol-pals-table-links, echo = FALSE}
-# Utility functions: ------
+# 1. Utility functions: ------
 
-# look_up: Generalization of get_fns (above): ---- 
+# lookup: Look-up / filtering operations within a df: ----
+#         (A generalization of get_fns in 5_util.R.)
 
-look_up <- function(x, data, v_1 = 1, v_2 = 1){
+lookup <- function(x, df, v_1 = 1, v_2 = 1){
   
-  # identify vectors:
-  data_v_1 <- data[[v_1]]  # input
-  data_v_2 <- data[[v_2]]  # output
+  # identify vectors in df:
+  df_v_1 <- df[[v_1]]  # input  / origin
+  df_v_2 <- df[[v_2]]  # output / target
   
-  # positions matching x in input:
-  pos <- match(x, data_v_1)
+  # # (1) FIRST match of x in input:
+  # match_pos <- match(x, df_v_1)  # yields numeric index
+  # 
+  # # index output:
+  # df_v_2[match_pos]
   
-  # use pos to index output:
-  data_v_2[pos]
+  # (2) Allowing for multiple matches:
+  match_log <- df_v_1 %in% x  # yields logical index
   
-}
+  # index output:
+  df_v_2[match_log]
+  
+} # lookup(). 
+
 
 # # Check:
 # # (a) specific exemplars:
-# look_up(x = c("cardiff_1", "not there", "princeton_1"), data = unicol_data, v_1 = "pal", v_2 = "inst")
-# look_up(x = c("cardiff_1", "not there", "princeton_1"), data = unicol_data, v_1 = "pal", v_2 = "url")
+# lookup(x = c("cardiff_1", "not there", "princeton_1"), unicol_data, v_1 = "pal", v_2 = "inst")
+# lookup(x = c("cardiff_1", "not there", "princeton_1"), unicol_data, v_1 = "pal", v_2 = "url")
+# 
 # # (b) entire column:
-# look_up(x = unicol_data$pal, data = unicol_data, v_1 = "pal", v_2 = "inst")
-# look_up(x = unicol_data$pal, data = unicol_data, v_1 = "pal", v_2 = "url")
+# lookup(x = unicol_data$pal, unicol_data, v_1 = "pal", v_2 = "inst")
+# lookup(x = unicol_data$pal, unicol_data, v_1 = "pal", v_2 = "url")
+# 
+# # (c) 1 input with MANY outputs:
+# lookup(x = c("University of Waterloo", "nowhere", "McGill University"), unicol_data, v_1 = "inst", v_2 = "pal")
+# lookup(x = c("University of Waterloo", "nowhere", "McGill University"), unicol_data, v_1 = "inst", v_2 = "url")
+
+# # (d) Partial matches DO NOT work:
+# lookup(x = c("Waterloo", "nowhere", "McGill"), unicol_data, v_1 = "inst", v_2 = "url")
 
 
 
@@ -139,8 +155,8 @@ look_up <- function(x, data, v_1 = 1, v_2 = 1){
 link_inst <- function(pal){
 
   # look up inst and url corresponding to pal:  
-  inst_names <- look_up(pal, unicol_data, "pal", "inst")
-  inst_urls  <- look_up(pal, unicol_data, "pal", "url")  
+  inst_names <- lookup(pal, unicol_data, "pal", "inst")
+  inst_urls  <- lookup(pal, unicol_data, "pal", "url")  
   
   # create link:
   paste0("[", inst_names, "](", inst_urls, ")")
@@ -152,17 +168,18 @@ link_inst <- function(pal){
 # link_inst(unicol_data$pal)
 
 
+
 # link_doc: Create a link to online documentation (given a vector of pal names): ----
 
 link_github_doc <- function(pal){
 
-  ref_url <- paste0(url_github_doc_dev, "reference/")      # release version
+  ref_url <- paste0(url_github_doc_dev, "reference/")  # reference of dev version
   
   # base_url <- "../reference/"  # relative link
   
   # # look up inst and url corresponding to pal:  
-  # inst_names <- look_up(pal, unicol_data, "pal", "inst")
-  # inst_urls  <- look_up(pal, unicol_data, "pal", "url")  
+  # inst_names <- lookup(pal, unicol_data, "pal", "inst")
+  # inst_urls  <- lookup(pal, unicol_data, "pal", "url")  
   
   prefix <- ref_url
   suffix <- ".html"
@@ -177,25 +194,27 @@ link_github_doc <- function(pal){
 # link_github_doc(unicol_data$pal)
 
 
+
 # n_col: Get number of colors (for 1 loaded pal): ----
 
 n_col <- function(pal_name){
   
   length(eval(str2expression(pal_name)))
   
-}
+} # n_col(). 
 
 # # Check:
 # n_col("uni_konstanz_1")
 # sapply(unicol_data$pal, FUN = n_col)
 
 
-# 2: Process unicol_data: ------
+
+# 2. Process unicol_data: ------
 
 my_pals <- unicol_data$pal
 
 # Look up URLs and create links for my_pals:
-pal_urls <- look_up(my_pals, unicol_data, v_1 = "pal", v_2 = "url")
+pal_urls <- lookup(my_pals, unicol_data, v_1 = "pal", v_2 = "url")
 pal_inst_links <- link_inst(my_pals)
 pal_doc_links  <- link_github_doc(my_pals)
 pal_lengths    <- sapply(X = unicol_data$pal, FUN = n_col)
@@ -211,7 +230,9 @@ col_names <- c("University",
                "Color palette", 
                "N colors")
 
-# 3: Print table: ------
+
+# 3. Print table: ------
+
 df_caption <- paste0("Overview of ", n_pals, " unicol palettes (from ", n_inst, " institutions).")
 
 knitr::kable(my_df, caption = df_caption, col.names = col_names, row.names = TRUE)
